# ml_privacy_meter

./: .gitignore  attacks.py  audit.py  get_signals.py  pyproject.toml  requirements.txt  run_mia_new.py  run_mia_new_target.py  util.py  visualize.py
.run/: run_mia_new (agnews).run.xml  run_mia_new (agnews_lora).run.xml  run_mia_new (swallow_code).run.xml  run_mia_new (swallow_code_lora).run.xml  run_mia_new (swallow_code_mellum).run.xml
configs/: agnews.yaml  agnews_lora.yaml  code_clippy.yaml  code_clippy_lora.yaml  swallow_code.yaml  swallow_code_lora.yaml  swallow_code_lora_experiment.yaml  swallow_code_mellum.yaml
dataset/: __init__.py  code_clippy.py  code_clippy_github.py  huggingface_dataset.py  range_dataset.py  swallow_code.py  utils.py
models/: RMIAModelTrainer.py  utils.py
trainers/: train_transformers.py
